# snqb

./: .gitignore  README.md  bot.py  config.yml  pyproject.toml
src/: utils.py
src/config/: __init__.py
src/plugins/gm/: __init__.py
src/plugins/help/: __init__.py
src/plugins/member_change/: __init__.py
src/plugins/meme/: __init__.py
src/plugins/music/: __init__.py
src/plugins/poke/: __init__.py
src/plugins/reply/: __init__.py
src/plugins/scheduler/: __init__.py
src/plugins/setu/: __init__.py
src/plugins/test/: __init__.py
