[project]
name = "snqb"
version = "0.1.0"
description = "snqb"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_access_control", "nonebot_plugin_htmlrender"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]
